--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +20,7 @@ body {
 
 form {
   width: 100%;
-  position: fixed;
+  position: relative;
 }
 
 button {
@@ -32,7 +35,9 @@ button.selected {
 }
 
 ul {
-  padding: 3rem 2rem 1rem;
+  /* padding: 3rem 2rem 1rem; */
+  margin-top: 1rem;
+  padding: 0 2rem 1rem;
 }
 
 li {
